removed fabric api from dependencies and stopped depending on it. changed to new event system in Gui.java DoubleJump.java added mixins for the new event system